--- a/openapi/schemas/index.yaml
+++ b/openapi/schemas/index.yaml
@@ -1,6 +1,6 @@
-Pet:
-  $ref: "./Pet.yaml"
-Pets:
-  $ref: "./Pets.yaml"
+User:
+  $ref: "./User.yaml"
+Users:
+  $ref: "./Users.yaml"
 Error:
   $ref: "./Error.yaml"
